# HT-Electron

./: .cspell.json  .cz-config.cjs  .cz-config.js  .gitignore  .prettierignore  README.md  build.sh  eslint.config.js  package.json  pnpm-lock.yaml
AliCloud/: clouddrive_pb2.py  clouddrive_pb2_grpc.py  sever.py
backend/: .gitignore  CONFIG_GUIDE.md  DEPLOYMENT.md  DOCKER_MIRROR_SETUP.md  Dockerfile  README.md  deploy.sh  docker-compose.yml  env.example  env.production  main.py  pyproject.toml  requirements.txt  start.bat  start.sh
backend/app/api/v1/: api.py
backend/app/api/v1/endpoints/: __init__.py  meetings.py  tasks.py  users.py
backend/app/core/: auth.py  config.py  database.py  exceptions.py
backend/app/models/: __init__.py
backend/app/schemas/: __init__.py
backend/app/services/: meeting_service.py  task_service.py  user_service.py
src/: main.js  preload.js
src/renderer/: index.html
src/renderer/i18n/: i18n.js
src/renderer/i18n/languages/: en-US.js  zh-CN.js
src/renderer/js/: api.js  app.js  auth.js  calendar.js  custom-select.js  files.js  navigation.js  settings.js  task.js  titlebar.js
src/renderer/styles/: auth.css  calendar.css  custom-select.css  files.css  main.css  navigation.css  settings.css  task.css  titlebar.css
